data/forge_javadoc/1.9.4/raw/net/minecraft/entity/monster/EntityPigZombie.md
---
title: "EntityPigZombie"
description: "public class EntityPigZombie extends EntityZombie"
package: "net/minecraft/entity/monster"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/entity/monster/EntityPigZombie.html"
sourceType: javadoc
---

# EntityPigZombie

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntityZombie → net.minecraft.entity.monster.EntityPigZombie

## Class signature

```java
public class EntityPigZombie extends EntityZombie
```

## Methods

- `protected void applyEntityAI()`
- `protected void applyEntityAttributes()`
- `boolean attackEntityFrom(DamageSource source, float amount)`
- `protected SoundEvent getAmbientSound()`
- `boolean getCanSpawnHere()`
- `protected SoundEvent getDeathSound()`
- `protected SoundEvent getHurtSound()`
- `protected ResourceLocation getLootTable()`
- `boolean isAngry()`
- `boolean isNotColliding()`
- `IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)`
- `void onUpdate()`
- `boolean processInteract(EntityPlayer player, EnumHand hand, ItemStack stack)`
- `void readEntityFromNBT(NBTTagCompound compound)`
- `protected void setEquipmentBasedOnDifficulty(DifficultyInstance difficulty)`
- `void setRevengeTarget(EntityLivingBase livingBase)`
- `protected void updateAITasks()`
- `void writeEntityToNBT(NBTTagCompound compound)`

## Fields

- `EntityPigZombie`
